重构模块化